--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconscout/react-unicons": "^2.0.2",
+    "next": "14.1.3",
     "react": "^18",
+    "react-18-image-lightbox": "^5.1.4",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-feather": "^2.0.10",
+    "react-modal-video": "^2.0.1",
+    "react-scroll": "^1.9.0",
+    "react-select": "^5.8.0",
+    "react-type-animation": "^3.2.0",
+    "tiny-slider": "^2.9.4",
+    "tiny-slider-react": "^0.5.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "eslint-plugin-react": "^7.34.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
